--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,8 @@
 .maindiv{
  display: flex;
  justify-content:space-between;
- background-color: red;
+ /* background-color: red; */
+ border-bottom: 2px solid rgb(255, 255, 255);
 
  
 
@@ -12,7 +13,11 @@
 .header__left{
   display: flex;
   align-items: center;
-  gap: 9px;
+  gap: 30px;
+}
+
+.name{
+  color: aliceblue;
 }
 
 
@@ -21,12 +26,15 @@
   justify-content:space-between;
   align-items: center;
   text-align: center;
-  background-color: rgb(9, 25, 25);
+  /* background-color: rgb(9, 25, 25); */
+  
   
   
   
 }
 
 .buttons__box{
-
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
